--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="index.css" />
-    <title>Document</title>
+    <title>Hello Microverse! Project</title>
 </head>
 <body>
-    <header>
+    <header> <!-- Main Header Section -->
         <h1>Hello Microverse!</h1>
     </header>
     
